clean up referencing code